<resources>    <string name="app_name">ኢትዮጲስ</string>    <string name="main_page_user_onile_status">onliine</string>    <string name="main_page_user_name"></string>    <string name="main_page_reading_time_content_description">reading time image</string>    <string name="main_page_reading_time_textview">Sweet Stories</string>    <string name="main_page_number_of_book_textview">8 stories</string>    <string name="main_page_start_btton_text">start</string>    <string name="main_page_video_texiview">Video</string>    <string name="this_is_image_is_video_thumblnail">this is image is video thumblnail</string>    <string name="main_page_number_of_video_textview">4 videos</string>    <string name="main_page_start_video_button">start</string>    <string name="main_page_role_model_text_view">Role model</string>    <string name="this_is_role_model_image_thumblinail">this is role model image thumblinail</string>    <string name="main_page_role_model_start_button">start</string>    <string name="main_page_number_of_roalmodel_books">3 role model</string>    <string name="main_activity_news_camp_main_textview">Ethiopis news</string>    <string name="main_page_news_cump_number_of_video_2_videos">2 videos</string>    <string name="main_page_news_camp_start_btn">start</string>    <string name="main_page_news_text_view">Ethiopis news</string>    <string name="number_of_news_text_view">25 news</string>    <string name="edit_profile_error_message_toast">fill the form.</string>    <string name="login_enter_phone_description">enter phone number to verify your account</string>    <string name="login_registration_title">registration</string>    <string name="my_profile_page_my_profile_title">my profile</string>    <string name="my_profile_page_name_title">name</string>    <string name="my_profile_page_age_title">age</string>    <string name="my_profile_page_grade_title">grade</string>    <string name="my_profile_page_school_title">school</string>    <string name="setting_logout_btn">log out</string>    <string name="setting_language_btn">languge</string>    <string name="setting_page_my_profile">my profile</string>    <string name="setting_page_setting_title_main_at_top">setting</string>    <string name="video_catagories_choose_video_title">choose video type</string>    <string name="video_catagories_reading_btn_title">reading</string>    <string name="video_catagories_music_btn_title">music</string>    <string name="video_catagories_funny_title">funny</string>    <string name="edit_profile_my_profile_title">my profile</string>    <string name="edit_profile_my_name_hint">my name</string>    <string name="edit_profile_age_hint">age</string>    <string name="edit_profile_grade_hint">grade</string>    <string name="edit_profile_school_hint">school</string>    <string name="edit_profile_update_btn_hint">update</string>    <string name="media_reading_progress_dialog_title">please wait</string>    <string name="media_reading_progress_dialog_setmessage">finding the naration sound</string>    <string name="bnm">new</string>    <string name="my_profile_myprofile_title">My Profile</string>    <string name="My_Profile_Username">UserName</string>    <string name="My_Profile_Age_title">Age</string>    <string name="My_Profile_Grade">Grade</string>    <string name="My_Profile_School">School</string>    <string name="my_profile_user_name">User Name</string>    <string name="Setting_Page_My_Profile">My Profile</string>    <string name="Setting_language_btn">Language</string>    <string name="Setting_logout_btn">Log Out</string>    <string name="Setting_Page_Setting_Title_Main_at_Top">Setting</string>    <string name="video_categories_choose_title">Catagories</string>    <string name="Media_Reading_Progress_dialog_title">No Internet</string>    <string name="Media_Reading_Progress_dialog_setmessage">Please Enable All The Internet Access</string>    <string name="this_story_languge_amharic">This Story</string>    <string name="brought_to_you_by_inAmharic">Brought To You By</string>    <string name="role_model_Video_Page">Role Model</string>    <string name="banner_ad_unit_id">ca-app-pub-4660054418346074/4757594391</string>    <string name="insta_ad_unit_id">ca-app-pub-4660054418346074/6918538088</string>    <string name="Video_Menu_funny_card_Text">Funny</string>    <string name="Video_Menu_music_card_Text">Music</string>    <string name="Video_Menu_story_card_Text">Story</string>    <string name="No_Internet_Access">No Internet Connection. Make sure that Wi-fi or mobile data is turned on, and try again.</string>    <string name="No_internet_access_title">Error</string>    <string name="Dialog_Box_Ok_Btn">Ok</string>    <string name="reading_name">Story</string>    <string name="video_name">Video</string>    <string name="role_name">Role</string>    <string name="news_name">News</string></resources>