<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/constraint"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context=".Edit_Profile"    >    <android.support.design.widget.AppBarLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:id="@+id/appBarLayout"        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"        >        <android.support.design.widget.CollapsingToolbarLayout            android:layout_width="match_parent"            android:layout_height="250dp"            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"            >            <android.support.constraint.ConstraintLayout                android:layout_width="match_parent"                android:layout_height="match_parent">                <ImageView                    android:id="@+id/profile_Page_Image"                    android:layout_width="100dp"                    android:layout_height="100dp"                    android:layout_marginStart="32dp"                    android:layout_marginLeft="32dp"                    android:layout_marginTop="80dp"                    android:scaleType="centerCrop"                    android:src="@drawable/avater"                    app:layout_constraintStart_toStartOf="parent"                    app:layout_constraintTop_toTopOf="parent" />                <TextView                    android:id="@+id/textView"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_marginStart="32dp"                    android:layout_marginLeft="32dp"                    android:layout_marginTop="100dp"                    android:text="Username"                    android:textSize="16sp"                    android:textColor="#fff"                    android:textStyle="bold"                    app:layout_constraintStart_toEndOf="@+id/profile_Page_Image"                    app:layout_constraintTop_toTopOf="parent" />                <TextView                    android:id="@+id/textView2"                    android:layout_width="wrap_content"                    android:layout_height="wrap_content"                    android:layout_marginStart="32dp"                    android:layout_marginLeft="32dp"                    android:layout_marginTop="8dp"                    android:text="Online"                    android:textColor="#ffff"                    app:layout_constraintStart_toEndOf="@+id/profile_Page_Image"                    app:layout_constraintTop_toBottomOf="@+id/textView" />            </android.support.constraint.ConstraintLayout>        </android.support.design.widget.CollapsingToolbarLayout>    </android.support.design.widget.AppBarLayout>    <android.support.design.widget.FloatingActionButton        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:src="@drawable/profile_camera"        android:tint="@android:color/white"        android:id="@+id/camera_update"        app:layout_anchor="@id/appBarLayout"        app:layout_anchorGravity="bottom|right|end"        android:layout_marginEnd="32dp"        android:layout_marginRight="32dp" />    <android.support.v4.widget.NestedScrollView        android:layout_width="match_parent"        android:layout_height="match_parent"        android:layout_marginTop="20dp"        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"        >        <android.support.constraint.ConstraintLayout            android:layout_width="match_parent"            android:layout_height="match_parent"            >            <TextView                android:id="@+id/Profile_username_hint"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:layout_marginStart="16dp"                android:layout_marginLeft="16dp"                android:text="@string/bnm"                android:textColor="#2196F3"                android:textSize="18sp"                android:textStyle="bold"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toTopOf="parent">            </TextView>            <View                android:id="@+id/divider10"                android:layout_width="30dp"                android:layout_height="2dp"                android:layout_marginStart="16dp"                android:layout_marginLeft="16dp"                android:layout_marginTop="8dp"                android:background="#000"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toBottomOf="@+id/Profile_username_hint" />            <android.support.design.widget.TextInputLayout                android:id="@+id/username_box"                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginStart="8dp"                android:layout_marginLeft="8dp"                android:layout_marginTop="16dp"                android:layout_marginEnd="8dp"                android:layout_marginRight="8dp"                app:errorEnabled="true"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintHorizontal_bias="0.0"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toBottomOf="@+id/divider10">                <android.support.design.widget.TextInputEditText                    android:id="@+id/profile_username"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:lines="1"                    android:hint="@string/edit_profile_my_name_hint" />            </android.support.design.widget.TextInputLayout>            <android.support.design.widget.TextInputLayout                android:id="@+id/name_text_input"                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginStart="8dp"                android:layout_marginLeft="8dp"                android:layout_marginTop="8dp"                android:layout_marginEnd="8dp"                android:layout_marginRight="8dp"                app:errorEnabled="true"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintHorizontal_bias="0.0"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toBottomOf="@+id/username_box">                <android.support.design.widget.TextInputEditText                    android:id="@+id/profile_Age_hint"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:inputType="number"                    android:hint="@string/edit_profile_age_hint" />            </android.support.design.widget.TextInputLayout>            <android.support.design.widget.TextInputLayout                android:id="@+id/grade_box"                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginStart="8dp"                android:layout_marginLeft="8dp"                android:layout_marginTop="8dp"                android:layout_marginEnd="8dp"                android:layout_marginRight="8dp"                app:errorEnabled="true"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintHorizontal_bias="1.0"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toBottomOf="@+id/name_text_input">                <android.support.design.widget.TextInputEditText                    android:id="@+id/textView5"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:inputType="number"                    android:hint="@string/edit_profile_grade_hint" />            </android.support.design.widget.TextInputLayout>            <android.support.design.widget.TextInputLayout                android:id="@+id/school_box"                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginStart="8dp"                android:layout_marginLeft="8dp"                android:layout_marginTop="12dp"                android:layout_marginEnd="8dp"                android:layout_marginRight="8dp"                app:errorEnabled="true"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintHorizontal_bias="0.0"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toBottomOf="@id/grade_box">                <android.support.design.widget.TextInputEditText                    android:id="@+id/textView3"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:hint="@string/edit_profile_school_hint" />            </android.support.design.widget.TextInputLayout>            <Button                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginStart="8dp"                android:layout_marginLeft="8dp"                android:layout_marginTop="8dp"                android:layout_marginEnd="8dp"                android:layout_marginRight="8dp"                android:layout_marginBottom="8dp"                android:padding="20dp"                android:text="@string/edit_profile_update_btn_hint"                android:id="@+id/update_btn"                android:background="@drawable/btn_style"                android:textColor="#fff"                app:layout_constraintBottom_toBottomOf="parent"                app:layout_constraintEnd_toEndOf="parent"                app:layout_constraintStart_toStartOf="parent"                app:layout_constraintTop_toBottomOf="@+id/school_box" />        </android.support.constraint.ConstraintLayout>    </android.support.v4.widget.NestedScrollView></android.support.design.widget.CoordinatorLayout>